--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   hexcolor:
+  arcore_flutter_plugin: 
 
 
   # The following adds the Cupertino Icons font to your application.
