--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   hexcolor:
-  arcore_flutter_plugin: 
+  arcore_flutter_plugin:
+  agora_rtc_engine: ^1.0.15
+  permission_handler: ^3.0.0 
 
 
   # The following adds the Cupertino Icons font to your application.
