--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   arcore_flutter_plugin:
   agora_rtc_engine: ^1.0.15
   permission_handler: ^3.0.0 
-
+  google_maps_flutter: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
