--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   agora_rtc_engine: ^1.0.15
   permission_handler: ^3.0.0 
   google_maps_flutter: ^0.4.0
+  introduction_screen: ^1.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
